Add assets folder

--- a/src/index.html
+++ b/src/index.html
@@ -10,11 +10,11 @@
   <body>
   <section class="section">
     <div class="container">
-      <h1 class="title">
-        Hello World
+      <h1 class="title has-text-white">
+        The Cheese Rules
       </h1>
-      <p class="subtitle">
-        My first website with <strong>Bulma</strong>!
+      <p class="subtitle has-text-light">
+        a Michael Lowe preference project
       </p>
     </div>
   </section>
