--- a/src/index.html
+++ b/src/index.html
@@ -3,12 +3,12 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Hello Bulma!</title>
+    <title>The Cheese Rules</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.0/css/bulma.min.css">
     <script defer src="https://use.fontawesome.com/releases/v5.0.7/js/all.js"></script>
   </head>
   <body>
-  <section class="section">
+  <section class="section main">
     <div class="container">
       <h1 class="title has-text-white">
         The Cheese Rules
@@ -16,6 +16,16 @@
       <p class="subtitle has-text-light">
         a Michael Lowe preference project
       </p>
+      <div class="field is-grouped">
+          <p class="control">
+            <a class="button is-primary">Begin</a>
+          </p>
+          <p class="control">
+            <a href="https://github.com/michael-lowe-nz/criteresDeFromage" class="button is-outlined is-primary">
+              Wtf lol
+            </a>
+          </p>
+        </div>
     </div>
   </section>
   </body>
