Slight animation to button

--- a/src/index.html
+++ b/src/index.html
@@ -21,7 +21,7 @@
             <a class="button is-primary">Begin</a>
           </p>
           <p class="control">
-            <a href="https://github.com/michael-lowe-nz/criteresDeFromage" class="button is-outlined is-primary">
+            <a rel="noopener noreferrer" target="_blank" href="https://github.com/michael-lowe-nz/criteresDeFromage" class="button is-outlined is-primary">
               Wtf lol
             </a>
           </p>
